Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96408

QDoc crashed while parsing the index file in Qt5.15

    XMLWordPrintable

Details

    • Linux/X11
    • ffa4ea0e4256e3521db37b9251a6ab2c7a2c1abb (qt/qttools/dev) fe78a43aef786cdf425e4978d7b22edc7a961ccf (qt/qttools/6.2)

    Description

      Use the qdoc -generate -indexdir /usr/share/qt5/doc command to parse annotations for custom projects in Qt 5.15. QDoc crashes.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chen_bin Chen Bin
            chen_bin Chen Bin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes